fix spacing and coming soon text

--- a/main.css
+++ b/main.css
@@ -312,8 +312,11 @@ h4 {
 .white-h2 {
     font-size: 1.8em;
     font-weight: 400;
-    padding-top: 50px;
+    padding-top: 40px;
     color: whitesmoke;
+    max-width: 90%;
+    margin: 0 auto;
+    min-height: 66px;
 }
 
 .white-h4 {
@@ -398,10 +401,6 @@ p {
         margin-top: 280px
     }
     
-
-    #btm-links {
-        margin-top: 100px;
-    }
 
     .privacy-title {
         margin-top: 250px;
@@ -541,12 +540,17 @@ p {
     }
 
     #btm-links {
-        margin-top: 70px;
+        margin-top:90px;
     }
 
     .privacy-title {
-        margin-top: 120px;
+        margin-top: 70px;
     }
+
+    .white-h2 {
+        max-width: 96%;
+    }
+
 }
 
 @media screen and (max-width:600px) {
